--- a/Instructions/20533D_LAB_AK_07.md
+++ b/Instructions/20533D_LAB_AK_07.md
@@ -7,7 +7,7 @@
 
 1. Ensure that you are signed in to MIA-CL1 as **Student** with the password **Pa55w.rd**, and that the **Add-20533DEnvironment** script successfully completed. The script creates an Azure VM of the size that supports nested virtualization. You will use it to install Docker Toolbox for Windows.
 
-> **Note**: For the region selection you can choose "southeastasia" and for the VM sizee "Standard_D2s_v3". This area and this size supports nested virtualization.
+> **Note**: For the region selection you can choose "southeastasia" and for the VM size "Standard_D2s_v3". This area and this size supports nested virtualization.
 
 2. Start Microsoft Edge and browse to [**https://portal.azure.com**](https://portal.azure.com). When prompted, sign in by using the Microsoft account that is the Service Administrator of your Azure subscription. 
 
