formatting to address #317

--- a/Instructions/20533D_LAB_07.md
+++ b/Instructions/20533D_LAB_07.md
@@ -117,11 +117,11 @@ Note: The Microsoft Azure portal is continually improved, and the user interface
 
   - --tlsverify 
 
-  - --tlscacert: **C:\Users\Student\.docker\machine\certs\ca.pem**
+  - --tlscacert: **C:\\Users\\Student\\.docker\\machine\\certs\\ca.pem**
 
-  - --tlscert: **C:\Users\Student\.docker\machine\certs\cert.pem**
+  - --tlscert: **C:\\Users\Student\\.docker\\machine\\certs\\cert.pem**
 
-  - --tlskey: **C:\Users\Student\.docker\machine\certs\key.pem**
+  - --tlskey: **C:\\Users\\Student\\.docker\\machine\\certs\\key.pem**
 
 > **Result**: After you complete this exercise, you should have successfully installed Docker Toolbox for Windows and created a Docker host in an Azure VM.
 
