docker-machine update

--- a/Instructions/20533D_LAB_07.md
+++ b/Instructions/20533D_LAB_07.md
@@ -54,11 +54,13 @@ Note: The Microsoft Azure portal is continually improved, and the user interface
 
 4. In the Remote Desktop session to **20533D0701-vm0**, turn off **IE Enhanced Security Configuration**. 
 
-5. In the Remote Desktop session , start Internet Explorer and navigate to https://docs.docker.com/docker-for-windows/install/#download-docker-for-windows
+5. In the Remote Desktop session , start Internet Explorer and navigate to [**https://docs.docker.com/docker-for-windows/install/**](https://docs.docker.com/docker-for-windows/install/)
 
-6. From the **Install Docker for Windows** page, run **Docker for Windows Installer.exe**.
+6. On the **Install Docker for Windows** page, click **Download from Docker Store**.
 
-7. Once the installation completed, click **Close and log out**.
+7. On the **Docker Community Edition for Windows** page, click **Get Docker CE for Windows (stable)**.
+
+8. Once the installation completed, click **Close and log out**.
 
 
 #### Task 2: 
