docker-machine update

--- a/Instructions/20533D_LAB_AK_07.md
+++ b/Instructions/20533D_LAB_AK_07.md
@@ -39,13 +39,15 @@
 
 14. If prompted, ensure that **Use recommended security, privacy, and compatibility settings** is selected and then click **OK**.
 
-15. In Internet Explorer, navigate to [**https://docs.docker.com/docker-for-windows/install/#download-docker-for-windows**](https://docs.docker.com/docker-for-windows/install/#download-docker-for-windows)
+15. In Internet Explorer, navigate to [**https://docs.docker.com/docker-for-windows/install/**](https://docs.docker.com/docker-for-windows/install/)
 
-16. On the **Install Docker for Windows** page, click **Get Docker for Windows (Stable)**.
+16. On the **Install Docker for Windows** page, click **Download from Docker Store**.
 
-17. When prompted whether to run or save **Docker for Windows Installer.exe**, click **Run**.
+17. On the **Docker Community Edition for Windows** page, click **Get Docker CE for Windows (stable)**.
 
-18. Once the installation completed, click **Close and log out**.
+18. When prompted whether to run or save **Docker for Windows Installer.exe**, click **Run**.
+
+19. Once the installation completed, click **Close and log out**.
 
 
 #### Task 2: Use Docker Machine to create hosts in Azure Deploy Docker Toolbox for Windows
