"Web + Mobile" section name change
Exercice 1, Task 1, point 3 : the "Web + Mobile" section was split in "Web" and "Mobile" : I changed the name of the section to select to "web"

--- a/Instructions/20533D_LAB_AK_05.md
+++ b/Instructions/20533D_LAB_AK_05.md
@@ -9,7 +9,7 @@
 
 2. Open Microsoft Edge, browse to the Azure portal at [**http://portal.azure.com**](http://portal.azure.com), and then sign in using the Microsoft account that is the Service Administrator of your Azure subscription.
 
-3. In the top-left corner of the portal, click **+ Create resource**, and then click **Web + Mobile**.
+3. In the top-left corner of the portal, click **+ Create resource**, and then click **Web**.
 
 4. On the Web + Mobile blade, click **Web App**.
 
