Change ressource name at creation
"Azure Container registry" is now known as "Container registry" in Lab A, Exercice 4 task 1

--- a/Instructions/20533D_LAB_AK_07.md
+++ b/Instructions/20533D_LAB_AK_07.md
@@ -274,7 +274,7 @@ docker -D -H tcp://IP-address:2376 --tlsverify --tlscacert=C:\Users\Student\.doc
 
 1. In the Remote Desktop session to 20533D0701-vm0, in the Azure portal in the Internet Explorer window, click **+ Create resource**.
 
-2. On the **New** blade, click **Containers**, and then click **Azure Container Registry**. 
+2. On the **New** blade, click **Containers**, and then click **Container Registry**. 
 
 3. On the **Create container registry** blade, specify the following settings and click **Create**:
 
