--- a/Instructions/20533D_LAB_AK_09.md
+++ b/Instructions/20533D_LAB_AK_09.md
@@ -9,7 +9,7 @@
 
 2. Start Mirosoft Edge, browse to the Azure portal at [**https://portal.azure.com**](https://portal.azure.com), and then sign in using the Microsoft account that is the Service Administrator of your subscription.
 
-3. In the Azure portal, in the hub menu, click **+ Create a resource**, click **Security + Identity** and then, click **Azure Active Directory**.
+3. In the Azure portal, in the hub menu, click **+ Create a resource**, click **Identity** and then, click **Azure Active Directory**.
 
 4. On the **Create directory** blade, specify the following and click **Create**:
 
@@ -24,7 +24,7 @@
 
 #### Task 2: Activate Azure AD Premium trial
   
-1. Refresh the Mirosoft Edge window displaying the Azure portal. Next, click your name in the upper right corner of the Azure portal and, in the drop-down menu, click the name of the Azure Active Directory tenant you created in the previous task.
+1. Refresh the Mirosoft Edge window displaying the Azure portal. Next, click the "Directory and subscription" filter near to your name in the upper right corner of the Azure portal and, in the "Directory + Subscription" blade, click the name of the Azure Active Directory tenant you created in the previous task.
 
 2. In the hub menu of the Azure portal, click **Azure Active Directory**. This will display the **adatum** Azure Active Directory tenant blade.
 
@@ -224,7 +224,7 @@
 8. In the PowerShell ISE, in the script pane, locate the following code:
 
   ```
-  New-MsolUser -UserPrincipalName mledford@<#Copy your Azure Directory domain name here#>.onmicrosoft.com -DisplayName 'Mario Ledford' -FirstName 'Mario' -LastName 'Ledford' -Password 'Pa55w.rd123' -ForceChangePassword $false -UsageLocation 'US'
+  New-MsolUser -UserPrincipalName mledford@<#Copy your Azure Directory domain name here#>.onmicrosoft.com -DisplayName 'Mario Ledford' -FirstName 'Mario' -LastName 'Ledford' -Password 'Pa55w.rd' -ForceChangePassword $false -UsageLocation 'US'
   ```
 
 9. Replace **`<#Copy your Azure Directory domain name here#>`** with the unique name you used to specify the DNS domain name of the Adatum Azure AD tenant in the first exercise of this lab.
@@ -410,33 +410,17 @@
 
 4. Click **All users**.
 
-5. If the **Multi-Factor Authentication** button appears in the toolbar of the **Users and groups - All users** blade, click **Multi-Factor Authentication**. This will open another Microsoft Edge tab. If prompted, sign in using the Microsoft account that is the Service Administrator of your subscription. Proceed directly to step 13.  
+5. In the toolbar of the **Users and groups - All users** blade, click **Multi-Factor Authentication**. This will open another Microsoft Edge tab. If prompted, sign in using the Microsoft account that is the Service Administrator of your subscription.
 
-6. If the **Multi-Factor Authentication** button does not appear in the toolbar of the **Users and groups - All users** blade, open another tab of Microsoft Edge and browse to [**https://manage.windowsazure.com**](https://manage.windowsazure.com).
+6. On the **multi-factor authentication** page, ensure that the **users** tab is displayed. In the **users** list, select the check box next to **Karen Gruber** and, in the **quick steps** section, click **Enable**. 
 
-7. If prompted, sign in with the credentials for the Microsoft account that is the Service Administrator of your Azure subscription.
+7. On the **About enabling multi-factor auth** page, click **enable multi-factor auth**.
 
-8. In the navigation pane, scroll down, and click **ACTIVE DIRECTORY**.
+8. On the **Updates successful** page, click **close**.
 
-9. Click the right arrow next to the **Adatum** directory.
+9. Click the user name entry in the upper right corner of the Microsoft Edge window and, in the drop down menu, click **Sign out**.
 
-10. Click **CONFIGURE**.
-
-11. Under **multi-factor authentication**, click **Manage service settings**.
-
-12. If prompted, sign in with the credentials for the Microsoft account that is the Service Administrator of your Azure subscription.
-
-   > **Note:** The following steps will have some buttons translated into the language of the country chosen in a previous step.
-
-13. On the **multi-factor authentication** page, ensure that the **users** tab is displayed. In the **users** list, select the check box next to **Karen Gruber** and, in the **quick steps** section, click **Enable**. 
-
-14. On the **About enabling multi-factor auth** page, click **enable multi-factor auth**.
-
-15. On the **Updates successful** page, click **close**.
-
-16. Click the user name entry in the upper right corner of the Microsoft Edge window and, in the drop down menu, click **Sign out**.
-
-17. Close the Microsoft Edge window, including both tabs.
+10. Close the Microsoft Edge window, including both tabs.
 
 
 #### Task 2: Test Multi-Factor Authentication
