Fixed the ps1 name in the exercice 1 task 2

--- a/Instructions/20533D_LAB_03.md
+++ b/Instructions/20533D_LAB_03.md
@@ -81,7 +81,7 @@ The main tasks for this exercise are as follows:
   
 1. On MIA-CL1, open a Windows PowerShell ISE window as Administrator
 
-2. In the Windows PowerShell ISE, open the script **E:\\Labfiles\\Lab03\\Starter\\New-AzureRm20533D03VM.ps1** and review its content.
+2. In the Windows PowerShell ISE, open the script **E:\\Labfiles\\Lab03\\Starter\\New-20533D03labVM2.ps1** and review its content.
 
 3. Run the script. 
 
