Connect via RDP Azure portal interface change

--- a/Instructions/20533D_LAB_AK_02.md
+++ b/Instructions/20533D_LAB_AK_02.md
@@ -388,29 +388,31 @@
   
 1. On MIA-CL1, in Microsoft Edge, in the Azure portal, in the hub menu, from the **Virtual machines** blade, click ellipsis to the right of the **20533D0202-vm1** entry and click **Connect**.
 
-2. When prompted, click **Save** and then click **Open**. 
+2. On the **Connect to virtual machine** blade, click **Download RDP File**.
 
-3. If a Remote Desktop Connection warning message displays, select **Don't ask me again for connections to this computer**, and then click **Connect**. 
+3. When prompted, click **Open**. 
 
-4. In the **Windows Security** dialog box, type the following credentials, and then click **OK**:
+4. If a Remote Desktop Connection warning message displays, select **Don't ask me again for connections to this computer**, and then click **Connect**. 
+
+5. In the **Windows Security** dialog box, type the following credentials, and then click **OK**:
 
   - User name: **Student**
 
   - Password: **Pa55w.rd1234**
 
-5. If another Remote Desktop Message displays, select the **Don't ask me again for connections to this computer** checkbox, and then click **Yes**.
+6. If another Remote Desktop Message displays, select the **Don't ask me again for connections to this computer** checkbox, and then click **Yes**.
 
-6. If prompted in the Remote Desktop session whether to allow your PC to be discoverable, click **No**.
+7. If prompted in the Remote Desktop session whether to allow your PC to be discoverable, click **No**.
 
-7. Once you are connected to 20533D0202-vm1 via the Remote Desktop session, click **Start** and click **Windows PowerShell**.
+8. Once you are connected to 20533D0202-vm1 via the Remote Desktop session, click **Start** and click **Windows PowerShell**.
 
-8. In the **Windows PowerShell** window, type the following cmdlet and then press Enter:
+9. In the **Windows PowerShell** window, type the following cmdlet and then press Enter:
 
   ```
   Test-NetConnection -ComputerName 10.0.1.4 -TraceRoute
   ```
 
-9. Verify that test is successful and note that the connection was routed over 10.0.0.4
+10. Verify that test is successful and note that the connection was routed over 10.0.0.4
 
 
 #### Task 3: Remove the lab environment
