--- a/Instructions/20533D_LAB_01.md
+++ b/Instructions/20533D_LAB_01.md
@@ -29,7 +29,7 @@ A. Datum Corporation wants to expand their cloud presence by taking advantage of
 
  Password: **Pa55w.rd**
 
- Before starting this lab, ensure that you have performed the "Preparing the Environment" demonstration tasks at the beginning of the first lesson in this module, and that the setup script has completed.
+ Before starting this lab, ensure that you have performed the "Preparing the Environment" demonstration at the beginning of the first lesson in this module, and that the setup script has completed.
 
 > **Note:** The Microsoft Azure portal is continually improved, and the user interface might have been updated since this lab was written. Your instructor will make you aware of any differences between the steps described in the lab and the current Azure portal user interface.
 
@@ -52,13 +52,15 @@ In the Azure portal, you must observe the organization of resources and customiz
 
 2. Edit the dashboard by changing the size of the **All resources** tile to **4x6**.
 
-3. Move down the **Service health** tile and the **Marketplace** tile such that their top edge aligns with the bottom edge of the **Quickstart tutorials** tile. 
+3. Move the **Service health** tile and the **Marketplace** tile such that they remain adjacent but their top edge aligns with the bottom edge of the **Quickstart tutorials** tile. 
 
-4. Move the **Quickstart tutorials** tile such that its left edge aligns with the right edge of the **All resources** tile and complete the edits.
+4. Save the edits.
 
 5. Review the results and reset the dashboard to the default state. 
 
-6. Add **Virtual machine scale sets** to the hub menu. Leave the Microsoft Edge window open.
+>  **Note**: This will remove all customizations of your current Dashboard.
+
+6. Add **Availability sets** to the hub menu. Leave the Microsoft Edge window open.
 
 #### Task 2: Use the Azure account portal
   
