--- a/Instructions/20533D_LAB_AK_01.md
+++ b/Instructions/20533D_LAB_AK_01.md
@@ -9,25 +9,27 @@
 
 2. Start Microsoft Edge, browse to https://portal.azure.com, and sign in by using the Microsoft account that is the Service Administrator of your Azure subscription.
 
-3. On the **Dashboard** page, at the top of the screen, click **Edit dashboard**.
+3. On the **Dashboard** page, at the top of the screen, click **Edit**.
 
 4. On the **Dashboard** page, right-click the **All resources** tile, and then click **6x4**.
 
-5. On the **Dashboard** page, move down the **Service health** tile and the **Marketplace** tile such that their top edge aligns with the bottom edge of the **Quickstart tutorials** tile. 
+5. On the **Dashboard** page, move the **Service health** tile and the **Marketplace** tile such that their remain adjacent but their top edge aligns with the bottom edge of the **Quickstart tutorials** tile. 
 
-6. Move the **Quickstart tutorials** tile such that its left edge aligns with the right edge of the **All resources** tile and click **Done customizing**.
+6. Click **Done customizing**.
 
-7. Review the results, then click **Edit dashboard** again.
+7. Review the results, then click **Edit** again.
 
 8. Right-click unoccupied area of the dashboard and, in the right-click menu, click **Reset to default state**. When prompted to confirm, click **Yes**.
 
+>  **Note**: This will remove all customizations of your current Dashboard.
+
 9. Click **Done customizing**.
 
-10. On the **Dashboard** page, in the hub menu, click **All services**, and then, in the service menu, click the star beside **Virtual machine scale sets**. Close the service menu and verify that the **Virtual machine scale sets** entry appears at the bottom of the hub menu. Leave the Microsoft Edge window open.
+10. On the **Dashboard** page, in the hub menu, click **All services**, and then, in the service menu, click the star beside **Availability sets**. Close the service menu and verify that the **Availability sets** entry appears at the bottom of the hub menu. Leave the Microsoft Edge window open.
 
 #### Task 2: Use the Azure account portal
   
-1. Start Microsoft Edge and browse to https://account.windowsazure.com
+1. Start Microsoft Edge and browse to https://azure.microsoft.com. 
 
 2. On the Account page, click **SIGN IN** and, if prompted, sign in by using the Microsoft account that is the Account Administrator of your Azure subscription.
 
