Azure portal interface updates

--- a/Instructions/20533D_LAB_01.md
+++ b/Instructions/20533D_LAB_01.md
@@ -38,7 +38,7 @@ A. Datum Corporation wants to expand their cloud presence by taking advantage of
 ### Scenario
   
 A. Datum has asked you to explore the available browser-based Azure portals to assess how the corporation will use them. 
-In the Azure portal, you must observe the organization of resources and customize the interface to make your testing environment more accessible. In the Azure Account Center, you must view and download your current billing data. 
+In the Azure portal, you must observe the organization of resources and customize the interface to make your testing environment more accessible. In the Azure Account Center, you must view and download your current billing data. You must also identify the association between your subscription and an Azure AD tenant.
 
  The main tasks for this exercise are as follows:
 
@@ -60,7 +60,13 @@ In the Azure portal, you must observe the organization of resources and customiz
 
 >  **Note**: This will remove all customizations of your current Dashboard.
 
-6. Add **Availability sets** to the hub menu. Leave the Microsoft Edge window open.
+6. Add **Availability sets** to the hub menu. 
+
+7. In the Azure portal, navigate to the blade displaying properties of your subscription. 
+
+8. On the blade representing your subscrption, in the **Overview** section, note the **Directory** entry, referencing the Azure Active Directory tenant associated with your subscription. In addition, note the **Change directory** entry in the toolbar, which allows you to switch the association to a different tenant.
+
+9. Leave the Microsoft Edge window open.
 
 #### Task 2: Use the Azure account portal
   
