Azure portal interface updates

--- a/Instructions/20533D_LAB_AK_01.md
+++ b/Instructions/20533D_LAB_AK_01.md
@@ -25,17 +25,25 @@
 
 9. Click **Done customizing**.
 
-10. On the **Dashboard** page, in the hub menu, click **All services**, and then, in the service menu, click the star beside **Availability sets**. Close the service menu and verify that the **Availability sets** entry appears at the bottom of the hub menu. Leave the Microsoft Edge window open.
+10. On the **Dashboard** page, in the hub menu, click **All services**, and then, in the service menu, click the star beside **Availability sets**. Close the service menu and verify that the **Availability sets** entry appears at the bottom of the hub menu. 
+
+11. In the **Hub** menu, click **All services**, and then, in the service menu, click **Subscriptions**.
+
+12. On the **Subscriptions** blade, click the entry reprsenting your Azure subscription.
+
+13. On the blade representing your subscrption, in the **Overview** section, note the **Directory** entry, referencing the Azure Active Directory tenant associated with your subscription. In addition, note the **Change directory** entry in the toolbar, which allows you to switch the association to a different tenant.
+
+14. Leave the Microsoft Edge window open.
 
 #### Task 2: Use the Azure account portal
   
 1. Start Microsoft Edge and browse to https://azure.microsoft.com. 
 
-2. On the Account page, click **SIGN IN** and, if prompted, sign in by using the Microsoft account that is the Account Administrator of your Azure subscription.
+2. On the Microsoft Azure page, click **My account**. On the **Manage your Azure account** page, click the **Usage and billing** link. If prompted, sign in by using the Microsoft account that is the Account Administrator of your Azure subscription.
 
 3. On the Account portal page, on the **subscriptions** tab, click the name of your subscription. 
 
-4. On the summary page, review the billing summary for your subscription on the page.
+4. On the summary page, review the billing summary for your subscription.
 
 5. On the summary page, on the right side of the screen, click **Download usage details**.
 
