Azure portal interface updates

--- a/Instructions/20533D_LAB_01.md
+++ b/Instructions/20533D_LAB_01.md
@@ -60,7 +60,7 @@ In the Azure portal, you must observe the organization of resources and customiz
 
 >  **Note**: This will remove all customizations of your current Dashboard.
 
-6. Add **Availability sets** to the hub menu. 
+6. Add **Tags** to the hub menu. 
 
 7. In the Azure portal, navigate to the blade displaying properties of your subscription. 
 
@@ -81,6 +81,8 @@ In the Azure portal, you must observe the organization of resources and customiz
 5. Open the usage details in Notepad. Note that this is intended to simply review its content – typically to analyze it in more details, you would use Microsoft Excel or other program capable of parsing csv files. The file might not include any data at this point if you have not yet deployed any resources into your subscription.
 
 6. Close Notepad.
+
+7. Close the Microsoft Edge window.
 
 >  **Result**: After completing this exercise, you should have used the Azure portals.
 
@@ -127,9 +129,11 @@ The main tasks for this exercise are as follows:
 
   - Subscription: the same Azure subscription in which you created the resource group
 
-  - Resource group name: click **Use existing** and select **20533D0101-LabRG** from the drop-down list
+  - Resource group name: **20533D0101-LabRG**
 
-  - Resource group location: the same Azure region in which you created the resource group 
+  - Location: the same Azure region in which you created the resource group 
+  
+  - BGP route propagation: **Disabled**
 
 
 #### Task 3: Configure tagging
@@ -138,11 +142,11 @@ The main tasks for this exercise are as follows:
 
 2. In the Azure portal, assign the tag named **project** with the value **test** to the route table **20533D0101-rt**
 
-3. From the service menu, navigate to the **Tags** blade.
+3. From the hub menu, navigate to the **Tags** blade.
 
 4. View entries with the tag **project : test**.
 
-5. Pin the list of resources with the tag **project : test** to dashboard. 
+5. Pin the list of resources with the tag **project : test** to Dashboard. 
 
 
 #### Task 4: Configure RBAC
@@ -175,7 +179,7 @@ The main tasks for this exercise are as follows:
 
 3. From the console pane of the Windows PowerShell ISE window, review the list of subscriptions associated with the account you used to sign in. 
 
-4. From the console pane of the Windows PowerShell ISE window, enumerate Azure resource providers, resource types, and the Azure regions where these resources are available.
+4. From the console pane of the Windows PowerShell ISE window, enumerate Azure resource providers, their registration state, their resource types, and the Azure regions where these resources are available.
 
 
 #### Task 2: Manage Azure resources and resource groups by using Azure PowerShell
@@ -245,7 +249,7 @@ The main tasks for this exercise are as follows:
 
 3. From **Administrator: Command Prompt**, use Azure CLI 2.0 to display properties of the Azure subscription associated with the account you used to sign in. Take note of the value of the **id** parameter, representing your Azure subscription ID. You will need it in the next task.
 
-4. From **Administrator: Command Prompt**, use Azure CLI 2.0 to list Azure resource providers, resource types, and the Azure regions where these resources are available.
+4. From **Administrator: Command Prompt**, use Azure CLI 2.0 to list Azure resource providers, their registration state, and their resource types.
 
 
 #### Task 2: Manage Azure resources and resource groups by using Azure CLI
