Azure portal interface updates

--- a/Instructions/20533D_LAB_AK_01.md
+++ b/Instructions/20533D_LAB_AK_01.md
@@ -25,9 +25,9 @@
 
 9. Click **Done customizing**.
 
-10. On the **Dashboard** page, in the hub menu, click **All services**, and then, in the service menu, click the star beside **Availability sets**. Close the service menu and verify that the **Availability sets** entry appears at the bottom of the hub menu. 
+10. On the **Dashboard** page, in the hub menu, click **All services**, and then, in the service menu, click the star beside **Tags**. Close the service menu and verify that the **Tags** entry appears at the bottom of the hub menu. 
 
-11. In the **Hub** menu, click **All services**, and then, in the service menu, click **Subscriptions**.
+11. In the hub menu, click **All services**, and then, in the service menu, click **Subscriptions**.
 
 12. On the **Subscriptions** blade, click the entry reprsenting your Azure subscription.
 
@@ -57,7 +57,7 @@
 
 10. Close Notepad.
 
-11. Close Microsoft Edge.
+11. Close the Microsoft Edge window.
 
 >  **Result**: After completing this exercise, you should have used the Azure portals.
 
@@ -70,15 +70,17 @@
 
 2. In the Azure portal, in the hub menu, click **Resource groups**.
 
-3. On the Resource groups blade, click **Add**.
+3. On the **Resource groups** blade, click **Add**.
 
-4. On the Resource groups blade, type the following values, and then click **Create**:
+4. On the **Resource groups** blade, type the following values, and then click **Create**:
 
   - Resource group name: **20533D0101-LabRG**
 
   - Subscription: the name of your Azure subscription
 
   - Resource group location: the Azure region closest to the lab location
+  
+ 5. Wait until the resource group is provisioned. This should take only a few seconds.
 
 #### Task 2: Create Azure resources
 
@@ -92,12 +94,14 @@
 
   - Resource group name: click **Use existing** and select **20533D0101-LabRG** from the drop-down list
 
-  - Resource group location: the same Azure region in which you created the resource group 
+  - Location: the same Azure region in which you created the resource group 
+  
+  - BGP route propagation: **Disabled**
 
 
 #### Task 3: Configure tagging
 
-1. In the Azure portal, on the hub menu, click **Resource groups**.
+1. In the Azure portal, in the hub menu, click **Resource groups**.
 
 2. On the Resource groups blade, click **20533D0101-LabRG**, and then, on the resource group blade, click **Tags**.
 
@@ -109,7 +113,7 @@
 
 6. On the **20533D0101-rt - Tags** blade, in the **Name** text box, select **project** from the drop-down list, and then in the **Value** drop-down list, select **test**. Click **Save**.
 
-7. In the hub menu, click **All services** and, in the service menu, click **Tags**
+7. In the hub menu, click **Tags**
 
 8. On the **Tags** blade, click **project : test**. This will display the **project : test** blade showing both the resource group and the route table resource you created.
 
@@ -117,22 +121,22 @@
 
 10. In the Azure portal, in the upper left corner, click **Microsoft Azure** to display Dashboard.
 
-11. On the Dashboard, click the **project : test** tile. View again the resources associated with this tag.
+11. On the **Dashboard** page, click the **project : test** tile. View again the resources associated with this tag.
 
 
 #### Task 4: Configure RBAC
   
-1. In the Azure portal, in the hub menu, click the **Resource groups** entry in the hub menu.
+1. In the Azure portal, in the hub menu, click the **Resource groups** entry.
 
-2. On the **Resource group** blade, click **20533D0101-LabRG**.
+2. On the **Resource groups** blade, click **20533D0101-LabRG**.
 
 3. On the 20533D0101-LabRG resource group blade, click **Access control (IAM)**.
 
 4. On the access control (IAM) blade of the resource group, click **Add**.
 
-5. On the **Add permissions** blade, in the **Role** drop-down list, click **Contributor**.
+5. On the **Add permissions** blade, in the **Role** drop-down list, click **Contributor**. Leave the default entry in the **Assign access to** drop-down list.
 
-6. On the **Add permissions** blade, in the **Select** text box, type a valid Microsoft account name, click the entry representing that account appearing underneath the text box, and click **Save**. You might have to click **Refresh** to view the effet of the assignment of the role.
+6. On the **Add permissions** blade, in the **Select** text box, type a valid Microsoft account name, click the entry representing that account appearing underneath the text box, and click **Save**. 
 
 >  **Result**: After completing this exercise, you should have used the Azure Resource Manager features in the Azure portal.
 
@@ -163,7 +167,7 @@
   Get-AzureRmResourceProvider
   ```
 
-6. Examine the output, including Azure resource providers, resource types, and the Azure regions where these resources are available.
+6. Examine the output, including Azure resource providers, their registration status, their resource types, and the Azure regions where these resources are available.
 
 #### Task 2: Manage Azure resources and resource groups by using Azure PowerShell
 
@@ -244,10 +248,10 @@
 9. From **Administrator: Command Prompt**, type the following command and then press Enter:
 
   ```
-  az provider list
+  az provider list --output tsv
   ```
 
-10. Examine the output, including Azure resource providers, resource types, and the Azure regions where these resources are available.
+10. Examine the output, including Azure resource providers, their registration status, and their resource types, 
 
 #### Task 2: Manage Azure resources and resource groups by using Azure CLI
 
