--- a/Instructions/20533D_LAB_AK_02.md
+++ b/Instructions/20533D_LAB_AK_02.md
@@ -21,18 +21,18 @@
 
 8. Click **Discard** to close the Edit Template blade.
 
-> **Note:** If the template fails to load into the Azure portal, navigate to the following URL: [**http://aka.ms/Fpqovq**](http://aka.ms/Fpqovq). Then, select and copy all text on the page. Paste the copied text into the **Edit template** blade, then perform steps 4 and 5 to review the template and close the Edit Template blade without making any changes.
+> **Note:** If the template fails to load into the Azure portal, navigate to the following URL: [**http://aka.ms/Fpqovq**](http://aka.ms/Fpqovq). Then, select and copy all text on the page. Paste the copied text into the **Edit template** blade, then perform steps 6 to 8 to review the template and close the Edit Template blade without making any changes.
 
 
 #### Task 2: Perform the deployment from the Azure portal
   
 1. On the **Create a Virtual Network with two Subnets** blade, specify the following settings and then click **Purchase**.
 
-  - Subscription: _select the name of your subscription in the drop down list_
+  - Subscription: select the name of your subscription in the drop down list
 
   - Resource group: ensure that **Create new** option is selected and type **20533D0203-LabRG** in the text box below
 
-  - Location: _in the drop-down list, select an Azure region close to the location of the lab environment_
+  - Location: in the drop-down list, select an Azure region you chose when running the provisioning script at the beginning of this module
 
   - Vnet Name: **20533D0203-vnet**
 
@@ -45,6 +45,8 @@
   - Subnet2Prefix: **10.10.1.0/24**
 
   - Subnet2Name: **Subnet2**
+  
+  - Location: **[resourceGroup().location]**
 
   - I agree to the terms and conditions stated above: **enabled**
 
@@ -255,9 +257,11 @@
 
   - Subscription: the name of your Azure subscription
 
-  - Resource group: **20533D0202-LabRG**
+  - Resource group: click **Use existing** and then select **20533D0202-LabRG** in the drop-down list
 
   - Location: the same Azure region in which you created the virtual network 20533D0202-vnet
+  
+  - BGP route propagation: **Disabled**
 
 4. Wait until the route table is provisioned. Next, in the Azure portal, in the hub menu, click **All services** and, in the service menu, click **Route tables**.
 
@@ -296,7 +300,7 @@
 
 2. On the **Virtual machines** blade, click ellipsis to the right of the **20533D0201-vm1** entry and click **Connect**.
 
-3. When prompted, click **Save** and then click **Open**.
+3. On the **Connect to virtual machine** blade, click **Download RDP File**. When prompted, click **Open**.
 
 4. If a Remote Desktop Connection warning message displays, select **Don't ask me again for connections to this computer**, and then click **Connect**. 
 
@@ -363,7 +367,7 @@
   
 1. On MIA-CL1, in Microsoft Edge, in the Azure portal, in the hub menu, from the **Virtual machines** blade, click ellipsis to the right of the **20533D0201-vm2** entry and click **Connect**.
 
-2. When prompted, click **Save** and then click **Open**.
+2. On the **Connect to virtual machine** blade, click **Download RDP File**. When prompted, click **Open**.
 
 3. If a Remote Desktop Connection warning message displays, select **Don't ask me again for connections to this computer**, and then click **Connect**. 
 
@@ -388,31 +392,29 @@
   
 1. On MIA-CL1, in Microsoft Edge, in the Azure portal, in the hub menu, from the **Virtual machines** blade, click ellipsis to the right of the **20533D0202-vm1** entry and click **Connect**.
 
-2. On the **Connect to virtual machine** blade, click **Download RDP File**.
+2. On the **Connect to virtual machine** blade, click **Download RDP File**. When prompted, click **Open**.
 
-3. When prompted, click **Open**. 
+3. If a Remote Desktop Connection warning message displays, select **Don't ask me again for connections to this computer**, and then click **Connect**. 
 
-4. If a Remote Desktop Connection warning message displays, select **Don't ask me again for connections to this computer**, and then click **Connect**. 
-
-5. In the **Windows Security** dialog box, type the following credentials, and then click **OK**:
+4. In the **Windows Security** dialog box, type the following credentials, and then click **OK**:
 
   - User name: **Student**
 
   - Password: **Pa55w.rd1234**
 
-6. If another Remote Desktop Message displays, select the **Don't ask me again for connections to this computer** checkbox, and then click **Yes**.
+5. If another Remote Desktop Message displays, select the **Don't ask me again for connections to this computer** checkbox, and then click **Yes**.
 
-7. If prompted in the Remote Desktop session whether to allow your PC to be discoverable, click **No**.
+6. If prompted in the Remote Desktop session whether to allow your PC to be discoverable, click **No**.
 
-8. Once you are connected to 20533D0202-vm1 via the Remote Desktop session, click **Start** and click **Windows PowerShell**.
+7. Once you are connected to 20533D0202-vm1 via the Remote Desktop session, click **Start** and click **Windows PowerShell**.
 
-9. In the **Windows PowerShell** window, type the following cmdlet and then press Enter:
+8. In the **Windows PowerShell** window, type the following cmdlet and then press Enter:
 
   ```
   Test-NetConnection -ComputerName 10.0.1.4 -TraceRoute
   ```
 
-10. Verify that test is successful and note that the connection was routed over 10.0.0.4
+9. Verify that test is successful and note that the connection was routed over 10.0.0.4
 
 
 #### Task 3: Remove the lab environment
@@ -437,7 +439,7 @@
 
 8. Start Microsoft Edge, browse to the Azure portal at [**https://portal.azure.com**](https://portal.azure.com), and sign in by using the Microsoft account that is the Service Administrator of your Azure subscription.
 
-9. In the Azure portal, click **Edit dashboard**.
+9. In the Azure portal, click **Edit**.
 
 10. Right-click unoccupied area of the dashboard and, in the right-click menu, click **Reset to default state**. When prompted to confirm, click **Yes**.
 
