the Azure portal interface updates

--- a/Instructions/20533D_LAB_02.md
+++ b/Instructions/20533D_LAB_02.md
@@ -54,7 +54,7 @@ The main tasks for this exercise are as follows:
 
 5. In the Azure portal, click **Edit template**.
 
-6. Review the structure of the JavaScript Object Notation (JSON) file. Examine the placeholders for values that can be edited during the deployment. This template contains the following parameters: _vnetName_,  _vnetAddressPrefix_, _subnet1Prefix_, _subnet1Name_, _subnet2Prefix_, and _subnet2Name_.
+6. Review the structure of the JavaScript Object Notation (JSON) file. Examine the placeholders for values that can be edited during the deployment. This template contains the following parameters: **_vnetName_**,  **_vnetAddressPrefix_**, **_subnet1Prefix_**, **_subnet1Name_**, **_subnet2Prefix_**, and **_subnet2Name_**.
 
 7. Review the content of the **Resources** section to identify type of the resource, its name, and properties.
 
@@ -69,7 +69,7 @@ The main tasks for this exercise are as follows:
 
   - Resource group: create a new group named **20533D0203-LabRG**
 
-  - Location: an Azure region close to the location of the lab environment
+  - Location: an Azure region you chose when running the provisioning script at the beginning of this module
 
   - Vnet Name: **20533D0203-vnet**
 
@@ -82,6 +82,8 @@ The main tasks for this exercise are as follows:
   - Subnet2Prefix: **10.10.1.0/24**
 
   - Subnet2Name: **Subnet2**
+  
+  - Location: **[resourceGroup().location]**
 
 2. Verify that provisioning of the new virtual network named **20533D0203-vnet** completed successfully.
 
@@ -284,6 +286,8 @@ The main tasks for this exercise are as follows:
   - Resource group: **20533D0202-LabRG**
 
   - Location: the same Azure region in which you created the virtual network 20533D0202-vnet
+  
+  - BGP route propagation: **Disabled**
 
 2. In the Azure portal, add to the route table a route with the following settings: 
 
