Updated launching PowerShell ISE

--- a/Instructions/20533D_LAB_AK_01.md
+++ b/Instructions/20533D_LAB_AK_01.md
@@ -145,7 +145,7 @@
   
 #### Task 1: Connect to your Azure subscription by using Azure PowerShell 
   
-1. On MIA-CL1, right-click the Windows PowerShell icon and then click **Run ISE as Administrator**. When prompted by User Account Control for confirmation, click **Yes**.
+1. On MIA-CL1, click **Start**, in the Start menu, expand the **Windows PowerShell** folder, right-click **Windows PowerShell ISE**, click **More**, and then click **Run as administrator**. When prompted by User Account Control for confirmation, click **Yes**.
 
 2. In the Windows PowerShell Integrated Scripting Environment (ISE), in the console pane, type the following cmdlet and then press Enter:
 
